fixed container 4 inner layout and size on smaller windows

--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,14 @@ button {
     color: #f9faf8;
     background: #1f2937;
     justify-content: space-evenly;
-    align-content: center;
+    align-items: center;
     flex-wrap: wrap;
     padding: 16px 0;
     
+}
+.hero {
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 .words {
@@ -88,19 +92,21 @@ button {
     align-items: flex-end;
     max-width: 350px;
     gap: 8px;
-
 }
 
-.button {
-    display: flex;
-    align-self: flex-start;
-}
 .section-two {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.information {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    padding: 32px 0;
 }
 
 .img-container {
@@ -146,19 +152,46 @@ button {
 
 .container-four {
     display: flex;
-    flex-direction: row;
     background: #3882F6;
     border-radius: 25px;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 64px 0;
-    gap: 100px;
+    min-width: 400px;
+    width: 50%;
 }
 
 .box {
     display: flex;
+    color: #E5E7EB;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    width: 200px;
+    flex: 1 1 auto;
+    gap: 8px;
     padding: 16px;
+    margin: 0 32px;
+}
+
+.button {
+    display: flex;
+    align-self: flex-start;
+    padding: 8px;
+}
+
+.button.call {
+    display: flex;
+    color: #E5E7EB;
+    background-color: #3882F6;
+    border-color:#E5E7EB;
+    min-width: 64px;
+    flex: 0;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding: 8px;
+    margin: 0 32px;
 }
